--- a/AltranFrontendAssessment/src/app/gnome-list/gnome-list.component.html
+++ b/AltranFrontendAssessment/src/app/gnome-list/gnome-list.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div>
+<div class="app-container">
   <div class="page-header">
     <h1>Brastlewark <small class="pull-right">Showing <span class="badge"> {{ gnomeTotal }}</span> Gnomes</small></h1>
     <h2 ng-if="type"><span class="label"></span></h2>
@@ -8,10 +8,7 @@
     <div class="col-lg-3" *ngFor="let gnome of gnomeList">
       <div class="gnome-panel panel panel-default">
         <div class="panel-heading">
-          <h1>
-            {{gnome.name}}
-            <span class="label label-primary pull-right">#{{gnome.id}}</span>
-          </h1>
+          <app-gnome-name [gnome]="gnome"></app-gnome-name>
         </div>
         <div class="panel-body">
           <a href="/gnome/id/{{gnome.id}}">
@@ -25,11 +22,7 @@
         </div>
         <div class="professions-container">
           <div class="text-center">
-            <a *ngFor="let professions of gnome.professions" (click)="getListByProfession(professions)">
-              <span class="btn btn-primary btn-xs professions">
-                  {{professions}}
-              </span>
-            </a>
+            <app-gnome-professions [professions]="gnome.professions"></app-gnome-professions>
           </div>
         </div>
       </div>
