--- a/AltranFrontendAssessment/src/app/gnome-profile/gnome-profile.component.html
+++ b/AltranFrontendAssessment/src/app/gnome-profile/gnome-profile.component.html
@@ -1,10 +1,7 @@
 <app-header></app-header>
-<div>
+<div class="app-container">
   <div class="page-header">
-    <h1>
-      {{gnome.name}}
-      <span class="label label-primary pull-right">#{{gnome.id}}</span>
-    </h1>
+    <app-gnome-name [gnome]="gnome"></app-gnome-name>
   </div>
   <div class="row">
     <div class="col-md-6">
@@ -15,38 +12,7 @@
         Gnome Profile
       </h4>
       <div class="tab-content">
-        <div>
-          <ul class="list-group">
-            <li class="list-group-item">
-              <strong>Professions</strong>
-              <span class="pull-right">
-                <a *ngFor="let professions of gnome.professions" (click)="getListByProfession(professions)">
-                  <span class="btn btn-primary btn-xs professions">
-                      {{professions}}
-                  </span>
-                </a>
-              </span>
-            </li>
-            <li class="list-group-item">
-              <strong>Height</strong>
-              <span class="pull-right">{{gnome.height}}</span>
-            </li>
-            <li class="list-group-item">
-              <strong>Weight</strong>
-              <span class="pull-right">{{gnome.weight}}</span>
-            </li>
-            <li class="list-group-item">
-              <strong>Friends</strong>
-              <ul>
-                <li *ngFor="let friend of gnome.friends">
-                  <a (click)="getByName(friend)">
-                      {{friend}}
-                    </a>
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </div>
+        <app-gnome-data [gnome]="gnome"></app-gnome-data>
       </div>
     </div>
   </div>
