--- a/AltranFrontendAssessment/src/app/gnome-list/gnome-list.component.html
+++ b/AltranFrontendAssessment/src/app/gnome-list/gnome-list.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div class="app-container">
   <div class="page-header">
-    <h1>Brastlewark <small class="pull-right">Showing <span class="badge"> {{ gnomeTotal }}</span> Gnomes</small></h1>
+    <h1>Brastlewark - View: {{ profession }} <small class="pull-right">Showing <span class="badge"> {{ gnomeTotal }}</span> Gnomes</small></h1>
     <h2 ng-if="type"><span class="label"></span></h2>
   </div>
   <div class="row">
